--- a/index.html
+++ b/index.html
@@ -59,40 +59,52 @@
                         </div>
                     </div>
                     <div class="hearder-down">
-                        <div class="btns-circle">
-                            <label>
-                                <input type="checkbox" name="check" />
-                                <div class="btn-circle"></div>
-                                <span></span>
-                            </label>
+                        <div class="hearder-down-left">
+                            <h3>СБРОС-ОТМЕНА</h3>
+                            <div class="hearder-down-left_btns">
+                                <div class="btns-circle">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <div class="btn-circle"></div>
+                                        <span></span>
+                                    </label>
+                                    <h4>1</h4>
+                                </div>
+                                <div class="btns-circle">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <div class="btn-circle"></div>
+                                        <span></span>
+                                    </label>
+                                    <h4>2</h4>
+                                </div>
+                                <div class="btns-circle">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <div class="btn-circle"></div>
+                                        <span></span>
+                                    </label>
+                                    <h4>3</h4>
+                                </div>
+                                <div class="btns-circle">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <div class="btn-circle"></div>
+                                        <span></span>
+                                    </label>
+                                    <h4>4</h4>
+                                </div>
+                            </div>
                         </div>
-                        <div class="btns-circle">
-                            <label>
-                                <input type="checkbox" name="check" />
-                                <div class="btn-circle"></div>
-                                <span></span>
-                            </label>
-                        </div>
-                        <div class="btns-circle">
-                            <label>
-                                <input type="checkbox" name="check" />
-                                <div class="btn-circle"></div>
-                                <span></span>
-                            </label>
-                        </div>
-                        <div class="btns-circle">
-                            <label>
-                                <input type="checkbox" name="check" />
-                                <div class="btn-circle"></div>
-                                <span></span>
-                            </label>
-                        </div>
-                        <div class="leds led_4">
-                            <label>
-                                <input type="checkbox" name="check" />
-                                <div class="btn-circle"></div>
-                                <span></span>
-                            </label>
+                        <div class="hearder-down-right">
+                            <h3>ВКЛ ОПОЗН</h3>
+                            <div class="leds led_4">
+                                <label>
+                                    <input type="checkbox" name="check" />
+                                    <div class="btn-circle"></div>
+                                    <span></span>
+                                </label>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -111,11 +123,22 @@
             <div class="container">
                 <div class="navbar">
                     <div class="nav-hearder">
-                        <div class="btns-blue btn_nav-hearder">
-                            <label>
-                                <input type="checkbox" name="check" />
-                                <span></span>
-                            </label>
+                        <div class="btn-scale">
+                            <h3>МАСШТАБ</h3>
+                            <div class="btns-blue-double">
+                                <div class="btns-blue-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-blue-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="nav-container">
