--- a/index.html
+++ b/index.html
@@ -129,6 +129,154 @@
                                 <div class="btns-blue-1">
                                     <label>
                                         <input type="checkbox" name="check" />
+                                        <span><h5>350</h5></span>
+                                    </label>
+                                </div>
+                                <div class="btns-blue-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span><h5>150</h5></span>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="nav-container">
+                        <div class="nav-container_left">
+                            <h4>БлП</h4>
+                            <div class="btns-red-double_vertical">
+                                <div class="btns-blue-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-blue-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="btns-red-double_vertical">
+                                <div class="btns-blue-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-blue-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="btns-red-double_vertical">
+                                <div class="btns-blue-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-blue-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="btns-red-double_vertical">
+                                <div class="btns-blue-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-blue-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="btns-red-double_vertical">
+                                <div class="btns-blue-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-blue-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="nav-container_right">
+                            <h4>Ц</h4>
+                            <div class="btns-blue-double_vertical">
+                                <div class="btns-blue-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-blue-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="btns-blue-double_vertical">
+                                <div class="btns-blue-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-blue-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="btns-blue-double_vertical">
+                                <div class="btns-blue-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-blue-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="btns-blue-double_vertical">
+                                <div class="btns-blue-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-blue-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="btns-blue-double_vertical">
+                                <div class="btns-blue-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
                                         <span></span>
                                     </label>
                                 </div>
@@ -141,74 +289,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="nav-container">
-                        <div class="nav-container_left">
-                            <div class="btns-red">
-                                <label>
-                                    <input type="checkbox" name="check" />
-                                    <span></span>
-                                </label>
-                            </div>
-                            <div class="btns-red">
-                                <label>
-                                    <input type="checkbox" name="check" />
-                                    <span></span>
-                                </label>
-                            </div>
-                            <div class="btns-red">
-                                <label>
-                                    <input type="checkbox" name="check" />
-                                    <span></span>
-                                </label>
-                            </div>
-                            <div class="btns-red">
-                                <label>
-                                    <input type="checkbox" name="check" />
-                                    <span></span>
-                                </label>
-                            </div>
-                            <div class="btns-red">
-                                <label>
-                                    <input type="checkbox" name="check" />
-                                    <span></span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="nav-container_right">
-                            <div class="btns-blue">
-                                <label>
-                                    <input type="checkbox" name="check" />
-                                    <span></span>
-                                </label>
-                            </div>
-                            <div class="btns-blue">
-                                <label>
-                                    <input type="checkbox" name="check" />
-                                    <span></span>
-                                </label>
-                            </div>
-                            <div class="btns-blue">
-                                <label>
-                                    <input type="checkbox" name="check" />
-                                    <span></span>
-                                </label>
-                            </div>
-                            <div class="btns-blue">
-                                <label>
-                                    <input type="checkbox" name="check" />
-                                    <span></span>
-                                </label>
-                            </div>
-                            <div class="btns-blue">
-                                <label>
-                                    <input type="checkbox" name="check" />
-                                    <span></span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
                     <div class="nav-footer">
                         <div class="nav-footer_left">
+                            <h4>ОТМЕНА</h4>
                             <div class="btns-circle">
                                 <label>
                                     <input type="checkbox" name="check" />
@@ -239,6 +322,7 @@
                             </div>
                         </div>
                         <div class="nav-footer_center">
+                            <h4>ПОДГОТ</h4>
                             <div class="btns-blue">
                                 <label>
                                     <input type="checkbox" name="check" />
@@ -265,29 +349,34 @@
                             </div>
                         </div>
                         <div class="nav-footer_right">
+                            <h4>Р</h4>
                             <div class="btns-white">
                                 <label>
                                     <input type="checkbox" name="check" />
                                     <span></span>
                                 </label>
+                                <h5>1</h5>
                             </div>
                             <div class="btns-white">
                                 <label>
                                     <input type="checkbox" name="check" />
                                     <span></span>
                                 </label>
+                                <h5>2</h5>
                             </div>
                             <div class="btns-white">
                                 <label>
                                     <input type="checkbox" name="check" />
                                     <span></span>
                                 </label>
+                                <h5>3</h5>
                             </div>
                             <div class="btns-white">
                                 <label>
                                     <input type="checkbox" name="check" />
                                     <span></span>
                                 </label>
+                                <h5>4</h5>
                             </div>
                         </div>
                     </div>
