--- a/index.html
+++ b/index.html
@@ -214,9 +214,37 @@
                                     </label>
                                 </div>
                             </div>
+                            <div class="btns-red-double_vertical">
+                                <div class="btns-blue-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-blue-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
                         </div>
                         <div class="nav-container_right">
                             <h4>Ц</h4>
+                            <div class="btns-blue-double_vertical">
+                                <div class="btns-blue-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-blue-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
                             <div class="btns-blue-double_vertical">
                                 <div class="btns-blue-1">
                                     <label>
@@ -748,17 +776,20 @@
             <div class="footer">
                 <div class="footer-above">
                     <div class="footer-above_left">
+                        <h4>ПсУ</h4>
                         <div class="footer-above_left-up">
                             <div class="btns-white btn-footer">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span>
+                                        <h5>ВКЛ</h5>
+                                    </span>
                                 </label>
                             </div>
                             <div class="btns-white btn-footer">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span><h5>ОТКЛ</h5></span>
                                 </label>
                             </div>
                         </div>
@@ -779,76 +810,79 @@
                     </div>
                     <div class="footer-above_right">
                         <div class="range-btns">
+                            <h4>ПсУ</h4>
                             <div class="btns-white grid-signal_1">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span><h5>1</h5></span>
                                 </label>
                             </div>
                             <div class="btns-white grid-signal_2">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span>
+                                        <h5>2</h5>
+                                    </span>
                                 </label>
                             </div>
                             <div class="btns-white frequency_3">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span><h5>3</h5></span>
                                 </label>
                             </div>
                             <div class="btns-white frequency_4">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span><h5>4</h5></span>
                                 </label>
                             </div>
                             <div class="btns-white frequency_5">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span><h5>5</h5></span>
                                 </label>
                             </div>
                             <div class="btns-white frequency_6">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span><h5>6</h5></span>
                                 </label>
                             </div>
                             <div class="btns-white frequency_7">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span><h5>7</h5></span>
                                 </label>
                             </div>
                             <div class="btns-white frequency_8">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span><h5>8</h5></span>
                                 </label>
                             </div>
                             <div class="btns-white frequency_9">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span><h5>9</h5></span>
                                 </label>
                             </div>
                             <div class="btns-white frequency_10">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span><h5>10</h5></span>
                                 </label>
                             </div>
                             <div class="btns-white frequency_11">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span><h5>11</h5></span>
                                 </label>
                             </div>
                             <div class="btns-white frequency_12">
                                 <label>
                                     <input type="checkbox" name="check" />
-                                    <span></span>
+                                    <span><h5>12</h5></span>
                                 </label>
                             </div>
                         </div>
@@ -858,22 +892,27 @@
                 <div class="footer-below">
                     <div class="footer-below_left">
                         <div class="btns-orange power">
+                            <h4>ABTOMAT ПОДГОТ</h4>
                             <label>
                                 <input type="checkbox" name="check" />
                                 <span></span>
                             </label>
                         </div>
-                        <div class="btns-blue">
-                            <label>
-                                <input type="checkbox" name="check" />
-                                <span></span>
-                            </label>
-                        </div>
-                        <div class="btns-blue">
-                            <label>
-                                <input type="checkbox" name="check" />
-                                <span></span>
-                            </label>
+                        <div class="shooting-mode">
+                            <h4>РЕЖИМ</h4>
+                            <h5>СТРЕЛЬБЫ</h5>
+                            <div class="btns-blue mode-one">
+                                <label>
+                                    <input type="checkbox" name="check" />
+                                    <span><h6>1</h6></span>
+                                </label>
+                            </div>
+                            <div class="btns-blue mode-two">
+                                <label>
+                                    <input type="checkbox" name="check" />
+                                    <span><h6>2</h6></span>
+                                </label>
+                            </div>
                         </div>
                         <div class="parent">
                             <div class="gear">
@@ -885,29 +924,64 @@
                         </div>
                     </div>
                     <div class="footer-below_center">
-                        <div class="btns-red">
-                            <label>
-                                <input type="checkbox" name="check" />
-                                <span></span>
-                            </label>
-                        </div>
-                        <div class="btns-red">
-                            <label>
-                                <input type="checkbox" name="check" />
-                                <span></span>
-                            </label>
-                        </div>
-                        <div class="btns-red">
-                            <label>
-                                <input type="checkbox" name="check" />
-                                <span></span>
-                            </label>
-                        </div>
-                        <div class="btns-red">
-                            <label>
-                                <input type="checkbox" name="check" />
-                                <span></span>
-                            </label>
+                        <h4>ПУСК</h4>
+                        <div class="array-push">
+                            <div class="btns-red-double">
+                                <div class="btns-red-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-red-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="btns-red-double">
+                                <div class="btns-red-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-red-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="btns-red-double">
+                                <div class="btns-red-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-red-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="btns-red-double">
+                                <div class="btns-red-1">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                                <div class="btns-red-2">
+                                    <label>
+                                        <input type="checkbox" name="check" />
+                                        <span></span>
+                                    </label>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="footer-below_right">
@@ -920,22 +994,30 @@
                             </div>
                         </div>
                         <div class="btns-blue">
+                            <h4>
+                                ВКЛ <br />
+                                ЛС
+                            </h4>
                             <label>
                                 <input type="checkbox" name="check" />
                                 <span></span>
                             </label>
                         </div>
-                        <div class="btns-red">
-                            <label>
-                                <input type="checkbox" name="check" />
-                                <span></span>
-                            </label>
-                        </div>
-                        <div class="btns-red">
-                            <label>
-                                <input type="checkbox" name="check" />
-                                <span></span>
-                            </label>
+                        <div class="recognition">
+                            <div class="btns-red">
+                                <h4>ВЫКЛ ЗАПРОС К</h4>
+                                <label>
+                                    <input type="checkbox" name="check" />
+                                    <span></span>
+                                </label>
+                            </div>
+                            <div class="btns-red">
+                                <h4>ВЫКЛ ОПОЗН</h4>
+                                <label>
+                                    <input type="checkbox" name="check" />
+                                    <span></span>
+                                </label>
+                            </div>
                         </div>
                     </div>
                 </div>
