--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="./global.css" />
-        <link rel="stylesheet" href="./grid.css" />
-        <link rel="stylesheet" href="./btn.css" />
-        <link rel="stylesheet" href="./styles.css" />
+        <link rel="stylesheet" href="./assets//css/global.css" />
+        <link rel="stylesheet" href="./assets/css/grid.css" />
+        <link rel="stylesheet" href="./assets/css/btn.css" />
+        <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
         <div class="home">
@@ -811,77 +811,77 @@
                     <div class="footer-above_right">
                         <div class="range-btns">
                             <h4>ПсУ</h4>
-                            <div class="btns-white grid-signal_1">
+                            <div class="btns-white be-1">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="check" value="1" />
                                     <span><h5>1</h5></span>
                                 </label>
                             </div>
-                            <div class="btns-white grid-signal_2">
+                            <div class="btns-white be-2">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="check" value="2" />
                                     <span>
                                         <h5>2</h5>
                                     </span>
                                 </label>
                             </div>
-                            <div class="btns-white frequency_3">
+                            <div class="btns-white be-3">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="check" value="3" />
                                     <span><h5>3</h5></span>
                                 </label>
                             </div>
-                            <div class="btns-white frequency_4">
+                            <div class="btns-white be-4">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="check" value="4" />
                                     <span><h5>4</h5></span>
                                 </label>
                             </div>
-                            <div class="btns-white frequency_5">
+                            <div class="btns-white be-5">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="check" value="5" />
                                     <span><h5>5</h5></span>
                                 </label>
                             </div>
-                            <div class="btns-white frequency_6">
+                            <div class="btns-white be-6">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="check" value="6" />
                                     <span><h5>6</h5></span>
                                 </label>
                             </div>
-                            <div class="btns-white frequency_7">
+                            <div class="btns-white be-7">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="check" value="7" />
                                     <span><h5>7</h5></span>
                                 </label>
                             </div>
-                            <div class="btns-white frequency_8">
+                            <div class="btns-white be-8">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="check" value="8" />
                                     <span><h5>8</h5></span>
                                 </label>
                             </div>
-                            <div class="btns-white frequency_9">
+                            <div class="btns-white be-9">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="check" value="9" />
                                     <span><h5>9</h5></span>
                                 </label>
                             </div>
-                            <div class="btns-white frequency_10">
+                            <div class="btns-white be-10">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="check" value="10" />
                                     <span><h5>10</h5></span>
                                 </label>
                             </div>
-                            <div class="btns-white frequency_11">
+                            <div class="btns-white be-11">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="check" value="11" />
                                     <span><h5>11</h5></span>
                                 </label>
                             </div>
-                            <div class="btns-white frequency_12">
+                            <div class="btns-white be-12">
                                 <label>
-                                    <input type="checkbox" name="check" />
+                                    <input type="checkbox" name="check" value="12" />
                                     <span><h5>12</h5></span>
                                 </label>
                             </div>
@@ -1023,6 +1023,6 @@
                 </div>
             </div>
         </div>
-        <script src="script.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
