--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
                             <div class="btns-blue-double">
                                 <div class="btns-blue-1">
                                     <label>
-                                        <input type="checkbox" name="check" />
+                                        <input type="radio" name="selectScale" value="350" />
                                         <span><h5>350</h5></span>
                                     </label>
                                 </div>
                                 <div class="btns-blue-2">
                                     <label>
-                                        <input type="checkbox" name="check" />
+                                        <input type="radio" name="selectScale" value="150" />
                                         <span><h5>150</h5></span>
                                     </label>
                                 </div>
@@ -234,7 +234,7 @@
                             <div class="btns-blue-double_vertical">
                                 <div class="btns-blue-1">
                                     <label>
-                                        <input type="checkbox" name="check" />
+                                        <input type="radio" name="selectChannel" />
                                         <span></span>
                                     </label>
                                 </div>
@@ -248,7 +248,7 @@
                             <div class="btns-blue-double_vertical">
                                 <div class="btns-blue-1">
                                     <label>
-                                        <input type="checkbox" name="check" />
+                                        <input type="radio" name="selectChannel" />
                                         <span></span>
                                     </label>
                                 </div>
@@ -262,7 +262,7 @@
                             <div class="btns-blue-double_vertical">
                                 <div class="btns-blue-1">
                                     <label>
-                                        <input type="checkbox" name="check" />
+                                        <input type="radio" name="selectChannel" />
                                         <span></span>
                                     </label>
                                 </div>
@@ -276,7 +276,7 @@
                             <div class="btns-blue-double_vertical">
                                 <div class="btns-blue-1">
                                     <label>
-                                        <input type="checkbox" name="check" />
+                                        <input type="radio" name="selectChannel" />
                                         <span></span>
                                     </label>
                                 </div>
@@ -290,7 +290,7 @@
                             <div class="btns-blue-double_vertical">
                                 <div class="btns-blue-1">
                                     <label>
-                                        <input type="checkbox" name="check" />
+                                        <input type="radio" name="selectChannel" />
                                         <span></span>
                                     </label>
                                 </div>
@@ -304,7 +304,7 @@
                             <div class="btns-blue-double_vertical">
                                 <div class="btns-blue-1">
                                     <label>
-                                        <input type="checkbox" name="check" />
+                                        <input type="radio" name="selectChannel" />
                                         <span></span>
                                     </label>
                                 </div>
@@ -751,18 +751,42 @@
                                         </div>
                                         <div class="row-bullet row">
                                             <div class="bullet c-1"><h3>ПсУ</h3></div>
-                                            <div class="bullet c-1">1</div>
-                                            <div class="bullet c-1">2</div>
-                                            <div class="bullet c-1">1</div>
-                                            <div class="bullet c-1">2</div>
-                                            <div class="bullet c-1">1</div>
-                                            <div class="bullet c-1">2</div>
-                                            <div class="bullet c-1">1</div>
-                                            <div class="bullet c-1">2</div>
-                                            <div class="bullet c-1">1</div>
-                                            <div class="bullet c-1">2</div>
-                                            <div class="bullet c-1">1</div>
-                                            <div class="bullet c-1">2</div>
+                                            <div class="bullet c-1 be" style="--i: 1">
+                                                <h3>1</h3>
+                                            </div>
+                                            <div class="bullet c-1 be" style="--i: 2">
+                                                <h3>2</h3>
+                                            </div>
+                                            <div class="bullet c-1 be" style="--i: 3">
+                                                <h3>3</h3>
+                                            </div>
+                                            <div class="bullet c-1 be" style="--i: 4">
+                                                <h3>4</h3>
+                                            </div>
+                                            <div class="bullet c-1 be" style="--i: 5">
+                                                <h3>5</h3>
+                                            </div>
+                                            <div class="bullet c-1 be" style="--i: 6">
+                                                <h3>6</h3>
+                                            </div>
+                                            <div class="bullet c-1 be" style="--i: 7">
+                                                <h3>7</h3>
+                                            </div>
+                                            <div class="bullet c-1 be" style="--i: 8">
+                                                <h3>8</h3>
+                                            </div>
+                                            <div class="bullet c-1 be" style="--i: 9">
+                                                <h3>9</h3>
+                                            </div>
+                                            <div class="bullet c-1 be" style="--i: 10">
+                                                <h3>10</h3>
+                                            </div>
+                                            <div class="bullet c-1 be" style="--i: 11">
+                                                <h3>11</h3>
+                                            </div>
+                                            <div class="bullet c-1 be" style="--i: 12">
+                                                <h3>12</h3>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="sum-bullet"></div>
